Conexion con la API the OPENWEATHER

--- a/index.html
+++ b/index.html
@@ -8,7 +8,81 @@
     <title>Tiempo</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Tiempo</h1>
+        <div class="logo-info">
+            <div class="logo">
+                <img src="./src/dia/04d.svg" alt="logo" class="logo">
+            </div>
+            <div class="info">
+                <p class="tiempo">nublado</p>
+                <p class="temperatura">15º</p>
+                <p class="lugar">España</p>
+            </div>
+        </div>
+
+        <div class="hora-prevision">
+            <div class="hora">
+                <p class="hora-prevision"></p>
+                <p class="hora-grados"></p>
+            </div>
+            <div class="hora">
+                <p class="hora-prevision"></p>
+                <p class="hora-grados"></p>
+            </div>
+            <div class="hora">
+                <p class="hora-prevision"></p>
+                <p class="hora-grados"></p>
+            </div>
+            <div class="hora">
+                <p class="hora-prevision"></p>
+                <p class="hora-grados"></p>
+            </div>
+            <div class="hora">
+                <p class="hora-prevision"></p>
+                <p class="hora-grados"></p>
+            </div>
+            <div class="hora">
+                <p class="hora-prevision"></p>
+                <p class="hora-grados"></p>
+            </div>
+            <div class="hora">
+                <p class="hora-prevision"></p>
+                <p class="hora-grados"></p>
+            </div>
+        </div>
+
+        <div class="dia-prevision">
+            <div class="dia">
+                <p class="dia-previson-nombre"></p>
+                <p class="dia-previson-temperatura"></p>
+            </div>
+            <div class="dia">
+                <p class="dia-previson-nombre"></p>
+                <p class="dia-previson-temperatura"></p>
+            </div>
+            <div class="dia">
+                <p class="dia-previson-nombre"></p>
+                <p class="dia-previson-temperatura"></p>
+            </div>
+            <div class="dia">
+                <p class="dia-previson-nombre"></p>
+                <p class="dia-previson-temperatura"></p>
+            </div>
+            <div class="dia">
+                <p class="dia-previson-nombre"></p>
+                <p class="dia-previson-temperatura"></p>
+            </div>
+            <div class="dia">
+                <p class="dia-previson-nombre"></p>
+                <p class="dia-previson-temperatura"></p>
+            </div>
+            <div class="dia">
+                <p class="dia-previson-nombre"></p>
+                <p class="dia-previson-temperatura"></p>
+            </div>
+        </div>
+    </div>
 
     <script src="js/app.js" />
 </body>
