--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <div class="hora-prevision">
+        <div class="hora-prevision-todo">
             <div class="hora">
                 <p class="hora-prevision"></p>
                 <p class="hora-grados"></p>
@@ -84,6 +84,6 @@
         </div>
     </div>
 
-    <script src="js/app.js" />
+    <script type="module" src="js/app.js" />
 </body>
 </html>
