--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Tiempo</title>
 </head>
 <body>
+    <div class="cargando">
+        <img src="src/otros/cargando.svg" alt="" class="">
+    </div>
     <div class="container">
         <h1>Tiempo</h1>
         <div class="logo-info">
